--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,1 +1,18 @@
+label {
+  line-height: 1.6;
+  font-size: larger;
+}
 
+.input-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.custom-input {
+  width: 100%;
+  max-width: 480px;
+  font-size: 16px;
+  padding: 8px;
+}
