Updated the about text

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -52,7 +52,7 @@
   <p>
     I'm a developer with a long-time interest in modern fullstack web
     development. This project gave me hands-on experience with Angular’s
-    reactive data flow using signals, real-time data binding, and error-handling
+    reactive data flow, real-time data binding, and error-handling
     strategies with RxJS.
   </p>
   <p>
