--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -14,10 +14,10 @@
   </div>
 
   <nav aria-label="Main navigation" class="main-nav">
-    <a routerLink="/home" class="pill-link purple" routerLinkActive="active"
+    <a routerLink="/home" class="pill-link blue" routerLinkActive="active"
       >Home</a
     >
-    <a routerLink="/about" class="pill-link red" routerLinkActive="active"
+    <a routerLink="/about" class="pill-link purple" routerLinkActive="active"
       >About</a
     >
   </nav>
