--- a/src/app/components/course-table/course-table.scss
+++ b/src/app/components/course-table/course-table.scss
@@ -1,13 +1,37 @@
 tr,
 td {
-  line-height: 1.6;
+  line-height: 1.3;
   font-size: larger;
 }
 
 th:nth-child(1),
 th:nth-child(2) td:nth-child(1),
 td:nth-child(2) {
-  padding-right: 1rem;
+  padding: 0.5rem;
+}
+
+th.progression-header {
+  background-color: rgb(62, 62, 62);
+  color: rgb(255, 255, 255);
+  border-radius: 4px;
+}
+
+tbody tr:nth-child(even) {
+  background-color: rgb(238, 238, 238);
+}
+
+table {
+  padding-bottom: 2rem;
+}
+
+tbody {
+  border-collapse: collapse;
+  text-indent: initial;
+  border-spacing: 2px;
+}
+
+tr > td:nth-child(3) {
+  text-align: center;
 }
 
 .wrap-heading {
