Added comments and cleaned up some

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -31,10 +31,10 @@
   <div class="image-wrapper">
     <div class="img-container">
       <picture>
-        <!-- Modernast först: AVIF -->
+        <!-- AVIF -->
         <source srcset="/images/sara.avif" type="image/avif" />
 
-        <!-- Näst bäst: WebP -->
+        <!-- WebP -->
         <source srcset="/images/sara.webp" type="image/webp" />
 
         <!-- Fallback: JPG -->
