chore: improve mobile-first layout and responsiveness

--- a/src/app/components/course-table/course-table.html
+++ b/src/app/components/course-table/course-table.html
@@ -5,8 +5,8 @@
         <span class="wrap-heading">Code</span> {{ getSortIcon('code') }}
       </th>
       <th (click)="setSort('translatedName')" class="progression-header">
-        <span class="wrap-heading">Course name</span> {{
-        getSortIcon('translatedName') }}
+        <span class="wrap-heading">Course name</span>
+        {{ getSortIcon('translatedName') }}
       </th>
       <th (click)="setSort('progression')" class="progression-header">
         <span class="full-name">Progres<wbr />sion</span>
