--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,8 +1,3 @@
-main {
-  flex: 1; /* Trycker ner footern till botten om innehållet är kort */
-  padding: 1rem;
-}
-
 footer {
   flex-direction: column;
   display: flex;
@@ -11,16 +6,15 @@ footer {
   font-size: larger;
   color: black;
   justify-content: center;
-  background-color: #f5f5f5;
-  border-top: 1px solid #ccc;
+  background-color: rgba(209, 218, 227, 0.1);
   width: 100vw;
 }
 
 .section {
-  background-color: #dbdbdb;
-  border-top: 1px solid #ccc;
+  background-color: rgba(66, 116, 163, 0.267);
   font-size: medium;
   width: 100vw;
+  border-top: 1px solid #ccc;
 }
 
 div.section {
