--- a/src/app/components/course-table/course-table.scss
+++ b/src/app/components/course-table/course-table.scss
@@ -1,8 +1,10 @@
-tr,
-td {
-  line-height: 1.3;
-  font-size: larger;
+table {
+  width: 100%;
+  font-size: 16px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
+
 
 th:nth-child(1),
 th:nth-child(2) td:nth-child(1),
@@ -10,55 +12,51 @@ td:nth-child(2) {
   padding: 0.5rem;
 }
 
+
+th.progression-header:nth-child(2) {
+  background-color: rgb(62, 62, 62);
+  color: white;
+  border-radius: 4px;
+}
+
 th.progression-header {
   background-color: rgb(62, 62, 62);
   color: rgb(255, 255, 255);
   border-radius: 4px;
+  margin: 1rem;
 }
+
 
 tbody tr:nth-child(even) {
   background-color: rgb(238, 238, 238);
 }
 
-table {
-  padding-bottom: 2rem;
-}
-
-tbody {
-  border-collapse: collapse;
-  text-indent: initial;
-  border-spacing: 2px;
-}
-
-tr > td:nth-child(3) {
-  text-align: center;
-}
 
 .wrap-heading {
   word-break: break-word;
   white-space: normal;
   hyphens: auto;
-  display: inline-block;
 }
+
 
 .full-name {
   display: none;
 }
 
+
 .short-name {
   display: inline;
 }
 
-@media screen and (min-width: 650px) {
-  nav {
-    display: flex;
-    width: 600px;
-    max-width: 600px;
-    border-top: 1px solid #eee;
-  }
 
-  .main-nav {
-    width: 600px;
+tr > td:nth-child(3) {
+  text-align: center;
+}
+
+
+@media (min-width: 600px) {
+  table {
+    font-size: 18px;
   }
 
   .full-name {
@@ -67,5 +65,22 @@ tr > td:nth-child(3) {
 
   .short-name {
     display: none;
+  }
+}
+
+
+@media (min-width: 768px) {
+  table {
+    width: 100%;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 900px) {
+  table {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
 }
