--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -5,15 +5,54 @@ label {
 
 .input-wrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   gap: 0.5rem;
   padding-bottom: 1.5rem;
 }
 
 .custom-input {
-  width: 100%;
-  max-width: 480px;
+  width: calc(100% - 3.2rem);
   font-size: 16px;
-  padding: 8px;
+  padding: 0.8rem;
+  box-sizing: border-box;
+  min-width: 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 320px) and (min-width: 600px) {
+  .custom-input {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 700px) {
+  .custom-input {
+    width: calc(100% - 2rem);
+    font-size: 18px;
+  }
+
+  table {
+    width: 100%;
+    font-size: 16px;
+    max-width: 700px;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+
+  app-course-table {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 700px;
+
+    app-course-table {
+      margin: 0 auto;
+      max-width: 700px;
+    }
+
+    app-course-table table {
+      width: 100%;
+      font-size: 16px;
+    }
+  }
 }
